styles.css
body {
	margin:0;
	padding:0;
	overflow-y: hidden;
}

header{
	display:flex;
	flex-direction: row;
	align-items: center;
	justify-content: center;
	font-size: 0.85em;
	gap:2em;
	background-color: #161616;
	color:white;
	position:fixed;
	width: 100vw;
	height:5.5vh;
}

h1, #initialMessage * {
	margin:0;
	margin-left: 10px;
}

nav {
	display: flex;
	flex-direction: row;
	align-items: center;
	justify-content: left;
	gap: 1em;
	padding:0;
	position:fixed;
	top:5.5vh;
	background-color: #2a2a2a;
	width:100vw;
	height:4.5vh;
	font-size: 0.7em;
	padding-left: 2em;
	overflow-x: scroll;
}
nav h2 {
	display:flex;
	align-items: center;
	font-weight: 100;
	padding:0 15px;
	height:4.5vh;
}
nav h2 aside {
	display:inline;
	font-weight: 100;
	font-size: 0.8em;
}

nav a {
	color:white;
	text-decoration: none;
	font-weight: bold;
}
nav .active {
	background-color: #890000;
}

header, nav {
	z-index: 1;
}

main {
	z-index: 0;
	position:absolute;
	top:12vh;
	/* display:flex;
	flex-direction: row;
	flex-wrap: wrap;
	justify-content: center;
	gap:2em;
	*/
	padding-left: 1em;
	padding-bottom:1em;
	column-count: 2;
	height:82vh;
}

.displayLoader main {
	width:100vw;
}

body.displaySections {
	overflow: hidden;
}

.displaySections main {
	column-count: initial;
	width: 100vw;
	overflow-y: auto;
	height:86vh;
}

.displaySections main div {
	max-height:30vh;
	column-count:1;
	column-gap: 2.5em;
	width: 250px;
	margin-top:30px;
}


.rss-element {
	width:250px;
	padding:5px 10px;
	border-radius: 5px;
	overflow: hidden;
	margin:10px 0;
}

.displaySections main div:first-child {
	margin: 0px;
}

.rss-element.fewHoursAgo {
	background-color: #999;
	
}
.rss-element.fewDaysAgo {
	background-color: #CCC;
	
}
.rss-element.someDaysAgo {
	background-color: #EEE;
	
}
.rss-element.fewWeeksAgo {
	border: 1px solid #CCC;
	
}


.rss-title {
	margin:0;
	margin-bottom:0.75em;
	overflow-wrap: anywhere;
	font-size: 0.95em;
}

.rss-title a {
	color:#4a0706;
}

.rss-description {
	font-size: 0.9em;
}

.rss-publicationDate {
	display: block;
	margin-top:0.5em;
	font-style: italic;
}

#loader {
	border: 16px solid #f3f3f3;
	border-top: 16px solid #3498db;
	border-radius: 50%;
	width: 100px;
	height: 100px;
	animation: spin 2s linear infinite;
	display: block;
	text-align: center;
	padding: 20px;
	margin: 3em auto;
	position:absolute;
	left: 40%;
}

@keyframes spin {
	0% {
		transform: rotate(0deg);
	}

	100% {
		transform: rotate(360deg);
	}
}

@media screen and (max-width:500px) {
	body {
		overflow-y: auto;
	}
	header {
		font-size:0.65em;
	}
	nav {
		padding-left: 0.5em;
	}
	nav h2 {
		font-size: 1.2em;
		padding: 0 5px;
	}
	nav h2 aside {
		display:block;
		font-size: 0.7em;
	}
	main {
		column-count: 1;
		height:auto;
	}
	.rss-element {
		width:80vw;
	}
	#loader {
		left: 20%;
	}
}

